# 6J_AI_Template

./: README.md
Template/: CMakeLists.txt  Introduction  premain.cpp
Template/include/: base.h  inference.h  yolact.h  yolov5.h  yolov5_seg.h
Template/src/: onnxrt_c.cpp  onnxrt_c.h  trt.cpp  trt.h
Template/yooact/: keep
pre_process/: bmp2jpg.py  cnt_conf.py  count_label.py  crop.py  crop_nolabel.py  draw.py  edge_seg.py  make_devset.py  mv.py  recover.py  recover_new.py  slide_crop.py  voc2yolo.py
